--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.movie-container {
+  display: grid;
+  grid-template-columns: repeat(10,1fr);
+
+  flex-wrap: wrap;
+}
